--- a/community-announcements.html
+++ b/community-announcements.html
@@ -181,7 +181,6 @@
               <i class="fa-solid fa-reply"></i>
               <i class="fa-solid fa-share"></i>
               <i class="fa-solid fa-ellipsis"></i>
-
             </div>
 
             <div class="message-img"><img src="Images/moamen.jpg"></div>
@@ -315,7 +314,7 @@
               <div class="member-img"><img src="Images/amr.jpg" /></div>
               <div class="member-overview">
                 <div class="upper-overview" style="background-image: url('Images/amr-back.jpg'); ">
-                  <div class="member-img-overview member-online"><img src="Images/amr.jpg" /></div>
+                  <div class="member-img-overview"><img src="Images/amr.jpg" /></div>
                 </div>
                 <div class="lower-overview">
                   <p class="member-name">amr</p>
@@ -326,7 +325,8 @@
                     <p class="role bf-orange">Admin</p>
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <button><i class="fa-solid fa-pen"></i> Edit Profile</button>
+                  <!-- <button><i class="fa-solid fa-pen"></i> Edit Profile</button> -->
+                  <input class= "overview-input" type="text" placeholder="Message @amr">
                 </div>
               </div>
 
@@ -357,7 +357,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @mazen_3lwany">
+                  <input class= "overview-input" type="text" placeholder="Message @mazen_3lwany">
                 </div>
               </div>
             </div>
@@ -390,7 +390,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moatasem">
+                  <input class= "overview-input" type="text" placeholder="Message @Moatasem">
                 </div>
               </div>
             </div>
@@ -421,7 +421,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Mohamed">
+                  <input class= "overview-input" type="text" placeholder="Message @Mohamed">
                 </div>
               </div>
             </div>
@@ -450,7 +450,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moamen">
+                  <input class= "overview-input" type="text" placeholder="Message @Moamen">
                 </div>
               </div>
 
@@ -481,7 +481,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Sara">
+                  <input class= "overview-input" type="text" placeholder="Message @Sara">
                 </div>
               </div>
             </div>
@@ -511,7 +511,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Shahd">
+                  <input class= "overview-input" type="text" placeholder="Message @Shahd">
                 </div>
               </div>
             </div>
