--- a/frontend-announcements.html
+++ b/frontend-announcements.html
@@ -229,7 +229,7 @@
               <div class="member-img"><img src="Images/amr.jpg" /></div>
               <div class="member-overview">
                 <div class="upper-overview" style="background-image: url('Images/amr-back.jpg'); ">
-                  <div class="member-img-overview member-online"><img src="Images/amr.jpg" /></div>
+                  <div class="member-img-overview"><img src="Images/amr.jpg" /></div>
                 </div>
                 <div class="lower-overview">
                   <p class="member-name">amr</p>
@@ -240,7 +240,8 @@
                     <p class="role bf-orange">Admin</p>
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <button><i class="fa-solid fa-pen"></i> Edit Profile</button>
+                  <!-- <button><i class="fa-solid fa-pen"></i> Edit Profile</button> -->
+                  <input class= "overview-input" type="text" placeholder="Message @amr">
                 </div>
               </div>
 
@@ -271,7 +272,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @mazen_3lwany">
+                  <input class= "overview-input" type="text" placeholder="Message @mazen_3lwany">
                 </div>
               </div>
             </div>
@@ -304,7 +305,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moatasem">
+                  <input class= "overview-input" type="text" placeholder="Message @Moatasem">
                 </div>
               </div>
             </div>
@@ -335,7 +336,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Mohamed">
+                  <input class= "overview-input" type="text" placeholder="Message @Mohamed">
                 </div>
               </div>
             </div>
@@ -364,7 +365,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moamen">
+                  <input class= "overview-input" type="text" placeholder="Message @Moamen">
                 </div>
               </div>
 
@@ -395,7 +396,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Sara">
+                  <input class= "overview-input" type="text" placeholder="Message @Sara">
                 </div>
               </div>
             </div>
@@ -425,7 +426,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Shahd">
+                  <input class= "overview-input" type="text" placeholder="Message @Shahd">
                 </div>
               </div>
             </div>
