--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -319,7 +319,7 @@
               <div class="member-img"><img src="Images/amr.jpg" /></div>
               <div class="member-overview">
                 <div class="upper-overview" style="background-image: url('Images/amr-back.jpg'); ">
-                  <div class="member-img-overview member-online"><img src="Images/amr.jpg" /></div>
+                  <div class="member-img-overview"><img src="Images/amr.jpg" /></div>
                 </div>
                 <div class="lower-overview">
                   <p class="member-name">amr</p>
@@ -330,7 +330,8 @@
                     <p class="role bf-orange">Admin</p>
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <button><i class="fa-solid fa-pen"></i> Edit Profile</button>
+                  <!-- <button><i class="fa-solid fa-pen"></i> Edit Profile</button> -->
+                  <input class= "overview-input" type="text" placeholder="Message @amr">
                 </div>
               </div>
 
@@ -361,7 +362,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @mazen_3lwany">
+                  <input class= "overview-input" type="text" placeholder="Message @mazen_3lwany">
                 </div>
               </div>
             </div>
@@ -394,7 +395,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moatasem">
+                  <input class= "overview-input" type="text" placeholder="Message @Moatasem">
                 </div>
               </div>
             </div>
@@ -425,7 +426,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Mohamed">
+                  <input class= "overview-input" type="text" placeholder="Message @Mohamed">
                 </div>
               </div>
             </div>
@@ -454,7 +455,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moamen">
+                  <input class= "overview-input" type="text" placeholder="Message @Moamen">
                 </div>
               </div>
 
@@ -485,7 +486,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Sara">
+                  <input class= "overview-input" type="text" placeholder="Message @Sara">
                 </div>
               </div>
             </div>
@@ -515,7 +516,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Shahd">
+                  <input class= "overview-input" type="text" placeholder="Message @Shahd">
                 </div>
               </div>
             </div>
