--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <main>
         <span id="title">Discord</span>
         <div class="signed-in" style="display: none;">
-            <p>You are already signed in as:</p>
+            <span>You are already signed in as:</span>
             <div class="signed-user"><img src="Images/amr.jpg" class="user-img">
                 <span class="user-name">amr</span>
             </div>
-            <button class="continue">Continue</button>
+            <div class="signed-buttons"><button id="continue">Continue</button><span id="sign-out">Not you?</span></div>
             <span style = "margin-top: 30px;">Or sign-in as:</span>
         </div>
         </div>
