--- a/off-topic.html
+++ b/off-topic.html
@@ -218,7 +218,6 @@
               <div class="message-media"></div>
               <div class="message-reactions">
                 <span>😂 3</span>
-
               </div>
             </div>
           </div>
@@ -413,7 +412,7 @@
               <div class="member-img"><img src="Images/amr.jpg" /></div>
               <div class="member-overview">
                 <div class="upper-overview" style="background-image: url('Images/amr-back.jpg'); ">
-                  <div class="member-img-overview member-online"><img src="Images/amr.jpg" /></div>
+                  <div class="member-img-overview"><img src="Images/amr.jpg" /></div>
                 </div>
                 <div class="lower-overview">
                   <p class="member-name">amr</p>
@@ -424,7 +423,8 @@
                     <p class="role bf-orange">Admin</p>
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <button><i class="fa-solid fa-pen"></i> Edit Profile</button>
+                  <!-- <button><i class="fa-solid fa-pen"></i> Edit Profile</button> -->
+                  <input class= "overview-input" type="text" placeholder="Message @amr">
                 </div>
               </div>
 
@@ -455,7 +455,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @mazen_3lwany">
+                  <input class= "overview-input" type="text" placeholder="Message @mazen_3lwany">
                 </div>
               </div>
             </div>
@@ -488,7 +488,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moatasem">
+                  <input class= "overview-input" type="text" placeholder="Message @Moatasem">
                 </div>
               </div>
             </div>
@@ -519,7 +519,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Mohamed">
+                  <input class= "overview-input" type="text" placeholder="Message @Mohamed">
                 </div>
               </div>
             </div>
@@ -548,7 +548,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Moamen">
+                  <input class= "overview-input" type="text" placeholder="Message @Moamen">
                 </div>
               </div>
 
@@ -579,7 +579,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Sara">
+                  <input class= "overview-input" type="text" placeholder="Message @Sara">
                 </div>
               </div>
             </div>
@@ -609,7 +609,7 @@
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
                   </div>
-                  <input type="text" placeholder="Message @Shahd">
+                  <input class= "overview-input" type="text" placeholder="Message @Shahd">
                 </div>
               </div>
             </div>
