--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <span class="user-name">amr</span>
             </div>
             <div class="signed-buttons"><button id="continue">Continue</button><span id="sign-out">Not you?</span></div>
-            <span style = "margin-top: 30px;">Or sign-in as:</span>
+            <span style = "margin-top: 30px;">Or sign in as:</span>
         </div>
         </div>
         <div class="user"><img src="Images/amr.jpg" class="user-img">
