--- a/main.html
+++ b/main.html
@@ -4,11 +4,11 @@
 
 <head>
     <title>Discord - nerds' community</title>
-    <link rel="stylesheet" href="Styles/General.css" />
+
     <link rel="stylesheet" href="Styles/Servers.css" />
     <link rel="stylesheet" href="Styles/Channels.css" />
     <link rel="stylesheet" href="Styles/Main.css" />
-
+    <link rel="stylesheet" href="Styles/General.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -25,15 +25,15 @@
         <section class="servers-section">
             <div class="pfp"><i class="fa-brands fa-discord"></i></div>
             <hr />
-            <div class="pfp pfp-active"><img src="Images/server.jpg" /></div>
-            <div class="pfp"><img src="Images/pablo.jpg" /></div>
-            <div class="pfp"><img src="Images/pic1.jpg" /></div>
-            <div class="pfp"><img src="Images/pic2.jpg" /></div>
-            <div class="pfp"><img src="Images/pic3.jpg" /></div>
-            <div class="pfp"><img src="Images/pic4.jpg" /></div>
-            <div class="pfp"><img src="Images/pic5.jpg" /></div>
-            <div class="pfp"><img src="Images/pic6.jpg" /></div>
-            <div class="pfp"><img src="Images/pic7.jpg" /></div>
+            <div class="pfp pfp-active" onclick="location.href = 'main.html'"><img src="Images/server.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pablo.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pic1.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pic2.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pic3.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pic4.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pic5.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pic6.jpg" /></div>
+            <div class="pfp disabled"><img src="Images/pic7.jpg" /></div>
         </section>
 
         <section class="channels-section">
@@ -103,9 +103,9 @@
                     </div>
                 </div>
 
-                <i class="fa-solid fa-microphone"><span class="tooltip">Turn Off Microphone</span></i>
-                <i class="fa-solid fa-headphones"><span class="tooltip">Deafen</span></i>
-                <i class="fa-solid fa-gear"><span class="tooltip">User Settings</span></i>
+                <i class="fa-solid fa-microphone disabled"><span class="tooltip">Turn Off Microphone</span></i>
+                <i class="fa-solid fa-headphones disabled"><span class="tooltip">Deafen</span></i>
+                <i class="fa-solid fa-gear disabled"><span class="tooltip">User Settings</span></i>
             </div>
         </section>
     </div>
@@ -115,17 +115,19 @@
         <nav class="main-header">
             <i class="fa-solid fa-arrow-left" id="show-left-section-button"></i>
             <span id="channel-name"> <span class="hash">#</span> community-announcements</span>
-            <i class="fa-solid fa-pen-to-square"><span class="tooltip">Threads</span></i>
-            <i class="fa-solid fa-bell"><span class="tooltip">Notification Settings</span></i>
-            <i class="fa-solid fa-thumbtack"><span class="tooltip">Pinned Messages</span></i>
+            <i class="fa-solid fa-pen-to-square unavailable"><span class="tooltip">Threads</span></i>
+            <i class="fa-solid fa-bell unavailable"><span class="tooltip">Notification Settings</span></i>
+            <i class="fa-solid fa-thumbtack unavailable"><span class="tooltip">Pinned Messages</span></i>
             <label for="member-list-checkbox"><i class="fa-solid fa-user-group"><span class="tooltip">Member
                         List</span>
                     <input type="checkbox" id="member-list-checkbox" style="display: none;" checked>
                 </i>
 
-            </label> <input placeholder="Search">
-            <i class="fa-solid fa-inbox circle af-red"><span class="tooltip">Inbox</span></i>
-            <i class="fa-solid fa-circle-info"><span class="tooltip">Help</span></i>
+            </label> <input placeholder="Search" id="search-input">
+            <!-- <i class="fa-solid fa-inbox circle af-red"><span class="tooltip">Inbox</span></i> -->
+            <i class="fa-solid fa-circle-info"
+                onclick='window.location.href = "https://github.com/AmrMosallem/Discord-Project/blob/main/README.md"'><span
+                    class="tooltip">Help</span></i>
         </nav>
 
         <div class="main-section-grid">
@@ -141,31 +143,30 @@
 
                 </div>
                 <div class="message-bar">
-                    <label for="#plus-checkbox">
-                        <i class="fa-solid fa-circle-plus plus-button">
-                            <input type="checkbox" id="#plus-checkbox" />
-                            <div class="plus-menu">
-                                <p><i class="fa-solid fa-file-arrow-up"></i>Upload a File</p>
-                                <p><i class="fa-solid fa-pen-to-square"></i>Create Thread</p>
-                                <p><i class="fa-solid fa-square-poll-horizontal"></i>Create Poll</p>
-                                <p><i class="fa-solid fa-table-cells-large"></i>Use Apps</p>
-                                <p><i class="fa-solid fa-rocket"></i>Start Activity</p>
-                            </div>
-                        </i>
-                    </label>
+
+                    <i class="fa-solid fa-circle-plus plus-button">
+                        <div id="plus-menu" class ="plus-menu-inactive">
+                            <p class="disabled"><i class="fa-solid fa-file-arrow-up "></i>Upload a File</p>
+                            <p class="disabled"><i class="fa-solid fa-pen-to-square "></i>Create Thread</p>
+                            <p class="disabled"><i class="fa-solid fa-square-poll-horizontal "></i>Create Poll</p>
+                            <p class="disabled"><i class="fa-solid fa-table-cells-large "></i>Use Apps</p>
+                            <p class="disabled"><i class="fa-solid fa-rocket "></i>Start Activity</p>
+                        </div>
+                    </i>
+
                     <textarea placeholder="Message #community-announcements" id="message-input"></textarea>
                     <button style="position:fixed; top:-100px;"></button>
-                    <i class="fa-solid fa-gift"></i>
+                    <!-- <i class="fa-solid fa-gift"></i>
                     <i class="fa-gif">GIF</i>
                     <i class="fa-solid fa-note-sticky"></i>
-                    <i class="fa-solid fa-face-smile"></i>
+                    <i class="fa-solid fa-face-smile"></i> -->
                     <div class="reply-bar">
                         <div>Replying to <span id="reply-name">@amr</span></div>
                         <i class="fa-solid fa-xmark" id="cancel-reply"></i>
                     </div>
                 </div>
 
-                <div id="confirm-container" class ="confirm-container">
+                <div id="confirm-container" class="confirm-container">
                     <div id="confirm-box">
                         <span id="confirm-title">Delete Message</span>
                         <div id="confirm-text">Are you sure you want to delete this message?</div>
@@ -187,7 +188,7 @@
 
 
                 <!-- amr -->
-                <label for="focus-button1">
+             
                     <div class="member-container member-offline">
                         <div class="member-img-container">
                             <div class="member-img"><img src="Images/amr.jpg" /></div>
@@ -215,12 +216,9 @@
                             <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
                             <span class="member-status member-status-active"></span>
                         </div>
-                        <input type="checkbox" id="focus-button1" class="focus-button">
-
                     </div>
-                </label>
                 <!-- mazen -->
-                <label for="focus-button3">
+              
                     <div class="member-container member-offline">
                         <div class="member-img-container">
                             <div class="member-img"><img src="Images/mazen.jpg" /></div>
@@ -246,13 +244,10 @@
                             <span class="member-status"></span>
                         </div>
 
-                        <input type="checkbox" id="focus-button3" class="focus-button">
                     </div>
-                </label>
 
 
                 <!-- moatasem -->
-                <label for="focus-button4">
                     <div class="member-container member-offline">
                         <div class="member-img-container">
                             <div class="member-img "><img src="Images/moatasem.jpg" /></div>
@@ -278,12 +273,9 @@
                             <p class="member-name fc-yellow">Moatasem</p>
                             <span class="member-status"></span>
                         </div>
-                        <input type="checkbox" id="focus-button4" class="focus-button">
                     </div>
-                </label>
 
                 <!-- mohamed -->
-                <label for="focus-button7">
                     <div class="member-container member-offline">
                         <div class="member-img-container">
                             <div class="member-img "><img src="Images/mohamed.jpg" /></div>
@@ -309,17 +301,14 @@
                             <p class="member-name fc-yellow">Mohamed</p>
                             <span class="member-status"></span>
                         </div>
-                        <input type="checkbox" id="focus-button7" class="focus-button">
                     </div>
-                </label>
                 <!-- moamen -->
-                <label for="focus-button2">
                     <div class="member-container member-offline">
                         <div class="member-img-container">
                             <div class="member-img"><img src="Images/moamen.jpg" /></div>
                             <div class="member-overview">
                                 <div class="upper-overview">
-                                    <div class="member-img-overview member-online"><img src="Images/moamen.jpg" /></div>
+                                    <div class="member-img-overview"><img src="Images/moamen.jpg" /></div>
                                 </div>
                                 <div class="lower-overview">
                                     <p class="member-name">Moamen</p>
@@ -339,11 +328,8 @@
                             <p class="member-name fc-yellow">Moamen</p>
                             <span class="member-status">اللي مش هيحل هيتفلتر</span>
                         </div>
-                        <input type="checkbox" id="focus-button2" class="focus-button">
                     </div>
-                </label>
                 <!-- sara -->
-                <label for="focus-button6">
                     <div class="member-container member-offline">
                         <div class="member-img-container">
                             <div class="member-img "><img src="Images/sara.jpg" /></div>
@@ -369,11 +355,8 @@
                             <p class="member-name fc-yellow">Sara</p>
                             <span class="member-status"></span>
                         </div>
-                        <input type="checkbox" id="focus-button6" class="focus-button">
                     </div>
-                </label>
                 <!-- shahd -->
-                <label for="focus-button5">
                     <div class="member-container member-offline">
                         <div class="member-img-container">
                             <div class="member-img "><img src="Images/shahd.jpg" /></div>
@@ -399,17 +382,9 @@
                             <p class="member-name fc-yellow">Shahd</p>
                             <span class="member-status"></span>
                         </div>
-                        <input type="checkbox" id="focus-button5" class="focus-button">
                     </div>
-                </label>
-
-
-
-
 
             </section>
-
-
         </div>
     </section>
 
