--- a/index.html
+++ b/index.html
@@ -21,34 +21,44 @@
                 <span class="user-name">amr</span>
             </div>
             <div class="signed-buttons"><button id="continue">Continue</button><span id="sign-out">Not you?</span></div>
-            <span style = "margin-top: 30px;">Or sign in as:</span>
+            <span style="margin-top: 30px;">Or sign in as:</span>
         </div>
         </div>
-        <div class="user"><img src="Images/amr.jpg" class="user-img">
+        <div class="user">
+        <div class="user-img-container"><img src="Images/amr.jpg" class="user-img">
+        </div>
             <span class="user-name">amr</span>
             <button class="sign-in">Sign in</button>
         </div>
-        <div class="user"><img src="Images/moamen.jpg" class="user-img">
+        <div class="user">
+            <div class="user-img-container"><img src="Images/moamen.jpg" class="user-img">
+            </div>
             <span class="user-name">Moamen</span>
             <button class="sign-in">Sign in</button>
         </div>
-        <div class="user"><img src="Images/mazen.jpg" class="user-img">
+        <div class="user">
+            <div class="user-img-container"><img src="Images/mazen.jpg" class="user-img">
+            </div>
             <span class="user-name">mazen_3lwany</span>
             <button class="sign-in">Sign in</button>
         </div>
-        <div class="user"><img src="Images/mohamed.jpg" class="user-img">
+        <div class="user">  <div class="user-img-container"><img src="Images/mohamed.jpg" class="user-img">
+        </div>
             <span class="user-name">Mohamed</span>
             <button class="sign-in">Sign in</button>
         </div>
-        <div class="user"><img src="Images/moatasem.jpg" class="user-img">
+        <div class="user">  <div class="user-img-container"><img src="Images/moatasem.jpg" class="user-img">
+        </div>
             <span class="user-name">Moatasem</span>
             <button class="sign-in">Sign in</button>
         </div>
-        <div class="user"><img src="Images/sara.jpg" class="user-img">
+        <div class="user">  <div class="user-img-container"><img src="Images/sara.jpg" class="user-img">
+        </div>
             <span class="user-name">Sara</span>
             <button class="sign-in">Sign in</button>
         </div>
-        <div class="user"><img src="Images/shahd.jpg" class="user-img">
+        <div class="user">  <div class="user-img-container"><img src="Images/shahd.jpg" class="user-img">
+        </div>
             <span class="user-name">Shahd</span>
             <button class="sign-in">Sign in</button>
         </div>
