--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <span class="user-name">Shahd</span>
                 <i class="fa-solid fa-arrow-right next-button"></i>
             </div>
+            <span id="guest">Or Sign In as Guest</span>
         </div>
         <div id="sign-in-container">
             <div id="sign-in-user">
