--- a/main.html
+++ b/main.html
@@ -182,9 +182,9 @@
 
             <section class="members-section">
 
-                <p class="role-text">FRONTEND DEVELOPERS - 1</p>
+                <p class="role-text" id="frontend-role">FRONTEND DEVELOPERS - 1</p>
 
-                <p class="role-text">
+                <p class="role-text" id="offline-role">
                     OFFLINE - 6
                 </p>
 
@@ -225,7 +225,7 @@
                     <div class="member-img-container">
                         <div class="member-img"><img src="Images/mazen.jpg" /></div>
                         <div class="member-overview">
-                            <div class="upper-overview">
+                            <div class="upper-overview" style="background: rgb(205, 185, 124) ">
                                 <div class="member-img-overview"><img src="Images/mazen.jpg" /></div>
                             </div>
                             <div class="lower-overview">
@@ -255,7 +255,7 @@
                         <div class="member-img "><img src="Images/moatasem.jpg" /></div>
 
                         <div class="member-overview">
-                            <div class="upper-overview">
+                            <div class="upper-overview" style="background: rgb(135, 196, 207)">
                                 <div class="member-img-overview"><img src="Images/moatasem.jpg" /></div>
                             </div>
                             <div class="lower-overview">
@@ -283,7 +283,7 @@
                         <div class="member-img "><img src="Images/mohamed.jpg" /></div>
 
                         <div class="member-overview">
-                            <div class="upper-overview">
+                            <div class="upper-overview" style="background: #ca6d6e">
                                 <div class="member-img-overview"><img src="Images/mohamed.jpg" /></div>
                             </div>
                             <div class="lower-overview">
@@ -309,7 +309,7 @@
                     <div class="member-img-container">
                         <div class="member-img"><img src="Images/moamen.jpg" /></div>
                         <div class="member-overview">
-                            <div class="upper-overview">
+                            <div class="upper-overview" style="background: rgb(181, 181, 181)">
                                 <div class="member-img-overview"><img src="Images/moamen.jpg" /></div>
                             </div>
                             <div class="lower-overview">
@@ -337,7 +337,7 @@
                         <div class="member-img "><img src="Images/sara.jpg" /></div>
 
                         <div class="member-overview">
-                            <div class="upper-overview">
+                            <div class="upper-overview" style="background: rgb(207, 184, 135)">
                                 <div class="member-img-overview"><img src="Images/sara.jpg" /></div>
                             </div>
                             <div class="lower-overview">
@@ -364,7 +364,7 @@
                         <div class="member-img "><img src="Images/shahd.jpg" /></div>
 
                         <div class="member-overview">
-                            <div class="upper-overview">
+                            <div class="upper-overview" style="background: #777630">
                                 <div class="member-img-overview"><img src="Images/shahd.jpg" /></div>
                             </div>
                             <div class="lower-overview">
