--- a/main.html
+++ b/main.html
@@ -157,6 +157,7 @@
                     </i>
 
                     <textarea placeholder="Message #community-announcements" id="message-input"></textarea>
+                    <i class="fa-solid fa-location-arrow" id="send"></i>
                     <button style="position:fixed; top:-100px;"></button>
                     <!-- <i class="fa-solid fa-gift"></i>
                     <i class="fa-gif">GIF</i>
@@ -399,7 +400,6 @@
     <script src="Script/Message.js"></script>
     <script src="Script/Mobile.js"></script>
     <script src="Script/User.js"></script>
-    <script src="Script/UserInfo.js"></script>
     <script src="Script/Main.js"></script>
 
 </body>
